creating a custom pipe from truncate a text; fixing the route problem on the news page to news details

--- a/src/app/pages/news/news.component.scss
+++ b/src/app/pages/news/news.component.scss
@@ -1,6 +1,10 @@
 .news{
     .card{
         height: 50vh;
+
+        &:hover{
+            cursor: pointer;
+        }
     }
     .card-img-top{
         height: 25vh;
